Bugfix in z-index header, bugfix in text styling, SEO update, new image format for default images

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -49,11 +49,11 @@ footer a {
 }
 
 footer h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+footer h2,
+footer h3,
+footer h4,
+footer h5,
+footer h6 {
     color: #fff;
 }
 footer p {
